syntax = "proto3";

package book;

service BookService {
  rpc Create (CreateRequest) returns (CreateResponse) {}
  rpc FindAll (FindAllRequest) returns (FindAllResponses) {}
  rpc FindOneById (FindOneByIdRequest) returns (FindOneByIdResponse) {}
  rpc UpdateOneById (UpdateRequestResponse) returns (UpdateRequestResponse) {}
  rpc DeleteOneById (DeleteRequest) returns (DeleteResponse) {}
}

// FindAll
message FindAllRequest {}

message FindAllResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string author = 4;
}

message FindAllResponses {
  repeated FindAllResponse data=1;
}

// Create
message CreateRequest {
  string title = 1;
  string description = 2;
  string author = 3;
}

message CreateResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string author = 4;
}

// FindOneById
message FindOneByIdRequest {
  int32 id = 1;
}

message FindOneByIdResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string author = 4;
}

// Update
message UpdateRequestResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string author = 4;
}

// Delete
message DeleteRequest {
  int32 id=1;
}

 message DeleteResponse {}